structural changes to ensure consistent alignment at different screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,29 +83,33 @@ main {
 }
 
 .hero {
-  text-align: right;
-  min-height: 300px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   background-image: url('../images/truckee-rocks.jpeg');
   background-size: auto;
   background-attachment: fixed;
   background-position: center -250px;
   border-color: var(--bgcolor-dark);
   padding: 30px 10%;
+  text-align: right;
+}
+
+.hero h2 {
+  color: var(--bgcolor-light);
+  flex: 2 60%;
+  font-size: 170%;
+  font-weight: 700;
+  padding-right: 20px;
+  text-align: right;
+  text-shadow: 1px 2px var(--bgcolor-dark);
 }
 
 .hero img {
   border: 4px solid var(--bgcolor-dark);
   border-radius: 16px;
+  flex: 1 40%;
   max-width: 200px;
-}
-
-.hero h2 {
-  font-size: 170%;
-  font-weight: 700;
-  padding: 20px;
-  color: var(--bgcolor-light);
-  text-align: right;
-  text-shadow: 1px 2px var(--bgcolor-dark);
 }
 
 article {
@@ -120,7 +124,7 @@ article h2 {
   border-bottom: 1px solid var(--bgcolor-dark);
   flex-basis: 100%;
   font-family: var(--font-headings);
-  font-size: 42px;
+  font-size: 36px;
   padding: 20px;
   text-align: center;
 }
@@ -150,6 +154,8 @@ article p, #contact-info ul {
   flex: 1 40%;
   height: 200px;
   margin: 5px;
+  color: var(--text-color-normal);
+  text-decoration: none;
 }
 
 /* make first project larger than the rest */
@@ -163,33 +169,34 @@ article p, #contact-info ul {
   background-image: url('../images/runbuddy-ss.png');
 }
 
-.project a {
-  color: var(--text-color-normal);
-  text-decoration: none;
-  width: 100%;
-}
-
 .project-label {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   background: var(--highlight);
   opacity: 0.98;
   border-radius: 0 0 12px 12px;
   padding: 5px 10px;
+  width: 100%;
 }
 
 .project-label h3 {
-  flex: 1 50%;
+  flex: 1 40%;
   font-size: 150%;
+  line-height: 1.5;
   padding: 0;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 .project-label p {
-  flex: 1 50%;
+  flex: 2 60%;
   font-size: 100%;
   padding: 0;
   text-align: right;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 #contact-info ul {
@@ -236,6 +243,12 @@ footer p {
     margin: 0 auto;
   }
 
+  header h1 {
+    flex: 1 40%;
+    text-align: left;
+    padding-left: 40px;
+  }
+  
   nav {
     flex: 2 100%;
     justify-content: flex-end;
@@ -263,14 +276,8 @@ footer p {
     border-bottom: none;
     border-right: 1px solid var(--bgcolor-dark);
     flex-basis: 20%;
-    font-size: 42px;
-    text-align: center;
-  }
-
-  header h1 {
-    flex: 1 40%;
-    text-align: left;
-    padding-left: 40px;
+    font-size: calc(22px + 1vw);
+    text-align: right;
   }
 }
 
